tests/ok/local-state-mutation-api.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

struct Holder {
  mut token: own i64,
  backup: own i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var values: Vec[i64] = [3, 4, 5];
  let removed: i64 = values.pop();
  values.clear();
  values.push(8);
  let current_len: i64 = values.len();

  var holder = Holder { token: make_owned(1), backup: make_owned(2) };
  let token = holder.token;
  drop token;
  holder.token = make_owned(3);
  drop holder;

  return removed + values[0] + current_len;
}
